--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="box4">
                         <p class="title">Interactive-comment section</p>
                         <p>
-                            This was created using Javascript, React functional states and hooks and also TailwindCSS.
+                            created using Javascript, React functional states and hooks and also TailwindCSS.
                             Users are able to comment, reply to comment edit and also delete their own comments.
                         </p>
                         <button><a href="https://interactive-comment-section-sage.vercel.app/"
