--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <div id="nav-links" class="nav-tags">
                         <nav>
                             <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#about">About</a></li>
-                                <li><a href="#projects">Projects</a></li>
-                                <li><a href="#contact">Contact</a></li>
+                                <li id="nav-home"><a href="#">Home</a></li>
+                                <li id="nav-about"><a href="#about">About</a></li>
+                                <li id="nav-projects"><a href="#projects">Projects</a></li>
+                                <li id="nav-contact"><a href="#contact">Contact</a></li>
                             </ul>
                         </nav>
 
